<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="a_new_bootable_usb_solution">A new bootable USB solution.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_denied">Access Denied</string>
    <string name="access_denied_by_parent">Your parent or guardian has denied access to this feature.</string>
    <string name="accessing_usb_device_please_wait">"Accessing USB Device. 
Please Wait…"</string>
    <string name="ad_blocker_detected_msg">"Adblocker or Private DNS detected.

Please disable any ad blockers and check your Private DNS settings to make sure ads aren’t being blocked."</string>
    <string name="ad_mob_ad_badge">Ad</string>
    <string name="add">Add</string>
    <string name="admob_app_id">ca-app-pub-3713957012650273~1840442467</string>
    <string name="admob_banner_id">ca-app-pub-3713957012650273/4786267673</string>
    <string name="admob_interstitial_id">ca-app-pub-3713957012650273/3257563584</string>
    <string name="admob_rewarded_id">ca-app-pub-3713957012650273/3467407028</string>
    <string name="admob_rewarded_interstitial_id">ca-app-pub-3713957012650273/9687240564</string>
    <string name="advanced_file_system">Advanced File System</string>
    <string name="advanced_partition_management_for_usb_devices">Advanced partition management for USB devices</string>
    <string name="align_partitions_with_4k">*Align partitions with 4K</string>
    <string name="all_data_will_be_formatted">All Data Will Be Formatted</string>
    <string name="all_data_will_be_lost">All Data Will Be Lost.</string>
    <string name="an_error_happened">An Error Happened.</string>
    <string name="analyzing">Analyzing…</string>
    <string name="and_volume_label">" and volume label '%1$s'"</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="apd_admob_banner_ad_text">Ad</string>
    <string name="apd_admob_banner_body_tools">Install Flood-It App for free! Free Popular Casual Game</string>
    <string name="apd_admob_banner_cta_tools">INSTALL</string>
    <string name="apd_admob_banner_headline_tools">Test Ad : Flood-It!</string>
    <string name="apd_admob_banner_icon_decs">Admob banner icon</string>
    <string name="app_name">Ultimate USB</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="applying_changes">Applying Changes</string>
    <string name="appodealKey">c26d79bee7e89a1898708dc7af76ec3d0a052f689d869a94</string>
    <string name="aps_mraid_close_button">Interstitial close button</string>
    <string name="archive_extracted_successfully">Archive Extracted Successfully.</string>
    <string name="archive_extractor">Archive Extractor</string>
    <string name="archive_file">Archive File:</string>
    <string name="archive_password">Archive Password</string>
    <string name="archive_supported_format">Supported Format: 7z, Arj, BZip2, Cab, Chm, Cpio, Deb, GZip, HFS, Iso, Lzh, Lzma, Nsis, Rar, Rpm, Split, Tar, Udf, Wim, Xar, Z, Zip</string>
    <string name="are_you_sure_you_want_to_apply_all_changes_this_operation_cannot_be_undone">Are you sure you want to apply all changes? This operation cannot be undone.</string>
    <string name="are_you_sure_you_want_to_cancel_the_process">Are you sure you want to cancel the process?</string>
    <string name="are_you_sure_you_want_to_remove_game">Are you sure you want to remove %1$s game?</string>
    <string name="are_you_sure_you_want_to_remove_this_partition_this_will_delete_all_data_on_it">Are you sure you want to remove this partition? This will delete all data on it.</string>
    <string name="are_you_sure_you_want_to_wipe_this_partition_this_will_delete_all_data_on_it">Are you sure you want to wipe this partition? This will delete all data on it.</string>
    <string name="autofill">Autofill</string>
    <string name="available_space">Available Space:</string>
    <string name="back_again_to_exit">Back Again To Exit…</string>
    <string name="backing_up_partition_at_sector">Backing up partition at sector %1$d</string>
    <string name="backup">Backup</string>
    <string name="backup_amp_restore">Backup / Restore</string>
    <string name="backup_or_restore_full_copy_from_usb_device">Backup Or Restore Full Copy From USB Device.</string>
    <string name="backup_partition_at_start_sector">Backup partition at start sector %1$d</string>
    <string name="backup_successfully">Backup Successfully</string>
    <string name="bad_device_detected_msg">"
⚠️ A \"%1$s\" drive was detected!

🚫 These drives are known to be fake or unstable, and the process is almost guaranteed to FAIL.

✅ Please save your time and switch to a genuine USB drive (ex: SanDisk) to ensure success."</string>
    <string name="bad_device_detected_msg2">"
⚠️ End-sector test failed!

🚫 Causes: faulty USB drive, bad OTG cable, or fake capacity. The process is likely to FAIL.

✅ Please switch to a genuine USB drive or try a different cable/port to ensure success."</string>
    <string name="bigo_ad_about_app_default">About this app</string>
    <string name="bigo_ad_click_to_try">Click to try?</string>
    <string name="bigo_ad_comment_num_text">Reviews</string>
    <string name="bigo_ad_cta_default">View more</string>
    <string name="bigo_ad_cta_download_default">Install</string>
    <string name="bigo_ad_description_default">Free access now!</string>
    <string name="bigo_ad_double_video_choose_video">Choose your favorite video</string>
    <string name="bigo_ad_double_video_count_down">Auto-play in %ds</string>
    <string name="bigo_ad_download_num_text">Downloads</string>
    <string name="bigo_ad_feedback_copied">Ad ERID copied</string>
    <string name="bigo_ad_feedback_copy_ad_id">ERID: %s</string>
    <string name="bigo_ad_feedback_copy_link">Copy link</string>
    <string name="bigo_ad_feedback_hide_ads">Hide ADs</string>
    <string name="bigo_ad_feedback_link_copied">Link copied</string>
    <string name="bigo_ad_feedback_rec_rule">Recommendation Rules</string>
    <string name="bigo_ad_feedback_report_ads">Report ADs</string>
    <string name="bigo_ad_feedback_user_privacy">Privacy</string>
    <string name="bigo_ad_feedback_why_this_ad">About this advertiser</string>
    <string name="bigo_ad_form_agree">I Agree</string>
    <string name="change_path">Change Path</string>
    <string name="create_bootable_usb_from_iso_image">Support: Windows, Linux, Apple DMG, Raspberry PI, MS-DOS, FreeDOS</string>
    <string name="create_directory">Create Directory</string>
    <string name="delete">Delete</string>
    <string name="document_provider">Partition Mounter</string>
    <string name="export">Export</string>
    <string name="format_usb">Format USB</string>
    <string name="format_usb_stick_support_fat32_exfat_ntfs_ext4_ext3_ext2">Format USB Stick Support FAT16, FAT32, exFAT, NTFS, Ext2, Ext3, Ext4</string>
    <string name="import_directory">Import Directory</string>
    <string name="import_file_files">Import File / Files</string>
    <string name="iso_burner">ISO Burner</string>
    <string name="iso_burner_hint">(ISO2USB / DROFUS)</string>
    <string name="later">LATER</string>
    <string name="manage_ps2_games_on_usb_add_iso_remove_organize">Manage PS2 Games on USB: Add ISO, Remove, Organize</string>
    <string name="mount_partition_as_a_document_provider">Mount Partition as external storage</string>
    <string name="open_create_partition_image_file">Open / Create Partition Image File.</string>
    <string name="partition_image_manager">Partition Image Manager</string>
    <string name="partition_wizard">Partition Wizard</string>
    <string name="ps2_usb_utils">PS2 USB Utils</string>
    <string name="raw_write">Raw Write</string>
    <string name="rename">Rename</string>
    <string name="select_all">Select All</string>
    <string name="simple_usb_file_explorer">Simple USB File Explorer.</string>
    <string name="the_application_will_automatically_shut_down_in_10_seconds">The application will automatically shut down in 10 seconds.</string>
    <string name="the_current_version_of_the_application_is_no_longer_up_to_date_we_kindly_request_you_to_update_to_the_most_recent_version_for_the_best_experience">The current version of the application is no longer up-to-date. We kindly request you to update to the most recent version for the best experience.</string>
    <string name="update_now">UPDATE NOW</string>
    <string name="update_required">Update Required</string>
    <string name="usb_file_manager">USB File Manager</string>
    <string name="ventoy_unofficial">Ventoy - Unofficial</string>
    <string name="wipe_all_usb_data_n_all_data_and_partitions_will_be_deleted">"Wipe All USB Data.
(All Data And Partitions Will Be Deleted)"</string>
    <string name="wipe_usb">Wipe USB</string>
    <string name="write_image_file_to_usb_device_byte_by_byte">Write Image File To USB Device (Byte By Byte).</string>
</resources>