<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/menuItem_select_all" android:title="@string/select_all" />
    <item android:id="@id/menuItem_create_dir" android:title="@string/create_directory" />
    <item android:id="@id/menuItem_import_file" android:title="@string/import_file_files" />
    <item android:id="@id/menuItem_import_directory" android:title="@string/import_directory" />
    <item android:enabled="false" android:id="@id/menuItem_export_file" android:title="@string/export" />
    <item android:enabled="false" android:id="@id/menuItem_rename" android:title="@string/rename" />
    <item android:enabled="false" android:id="@id/menuItem_change_path" android:title="@string/change_path" />
    <item android:enabled="false" android:id="@id/menuItem_delete" android:title="@string/delete" />
</menu>
