<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.mixapplications.commons.MixCardView android:id="@id/card_ventoy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="@drawable/mask" android:elevation="0.0dp" app:cardBackgroundColor="@color/designMainColor" app:cardCornerRadius="8.0dp" app:cardElevation="0.0dp" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:layout_marginStart="15.0dp" android:layout_marginEnd="15.0dp">
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/smallHeaderTextSize" android:textStyle="bold" android:textColor="@color/miniTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ventoy_unofficial" />
                </LinearLayout>
                <TextView android:textSize="@dimen/bodyTextSize" android:textStyle="bold" android:textColor="@color/miniDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/a_new_bootable_usb_solution" android:maxLines="3" />
            </LinearLayout>
        </com.mixapplications.commons.MixCardView>
        <com.mixapplications.commons.MixCardView android:id="@id/card_iso_burner" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="@drawable/mask" android:elevation="0.0dp" app:cardBackgroundColor="@color/designMainColor" app:cardCornerRadius="8.0dp" app:cardElevation="0.0dp" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:layout_marginStart="15.0dp" android:layout_marginEnd="15.0dp">
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/smallHeaderTextSize" android:textStyle="bold" android:textColor="@color/miniTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/iso_burner" />
                    <TextView android:textSize="@dimen/bodyTextSize" android:textStyle="bold" android:textColor="@color/miniDescription" android:gravity="center" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/iso_burner_hint" android:layout_marginStart="5.0dp" />
                </LinearLayout>
                <TextView android:textSize="@dimen/bodyTextSize" android:textStyle="bold" android:textColor="@color/miniDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/create_bootable_usb_from_iso_image" android:maxLines="3" />
            </LinearLayout>
        </com.mixapplications.commons.MixCardView>
        <com.mixapplications.commons.MixCardView android:id="@id/card_format" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="@drawable/mask" android:elevation="0.0dp" app:cardBackgroundColor="@color/designMainColor" app:cardCornerRadius="8.0dp" app:cardElevation="0.0dp" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:layout_marginStart="15.0dp" android:layout_marginEnd="15.0dp">
                <TextView android:textSize="@dimen/smallHeaderTextSize" android:textStyle="bold" android:textColor="@color/miniTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/format_usb" />
                <TextView android:textSize="@dimen/bodyTextSize" android:textStyle="bold" android:textColor="@color/miniDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/format_usb_stick_support_fat32_exfat_ntfs_ext4_ext3_ext2" android:maxLines="3" />
            </LinearLayout>
        </com.mixapplications.commons.MixCardView>
        <com.mixapplications.commons.MixCardView android:id="@id/card_partition_manager" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="@drawable/mask" android:elevation="0.0dp" app:cardBackgroundColor="@color/designMainColor" app:cardCornerRadius="8.0dp" app:cardElevation="0.0dp" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:layout_marginStart="15.0dp" android:layout_marginEnd="15.0dp">
                <TextView android:textSize="@dimen/smallHeaderTextSize" android:textStyle="bold" android:textColor="@color/miniTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/partition_wizard" />
                <TextView android:textSize="@dimen/bodyTextSize" android:textStyle="bold" android:textColor="@color/miniDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/advanced_partition_management_for_usb_devices" android:maxLines="3" />
            </LinearLayout>
        </com.mixapplications.commons.MixCardView>
        <com.mixapplications.commons.MixCardView android:id="@id/card_ps2_usb_utils" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="@drawable/mask" android:elevation="0.0dp" app:cardBackgroundColor="@color/designMainColor" app:cardCornerRadius="8.0dp" app:cardElevation="0.0dp" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:layout_marginStart="15.0dp" android:layout_marginEnd="15.0dp">
                <TextView android:textSize="@dimen/smallHeaderTextSize" android:textStyle="bold" android:textColor="@color/miniTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ps2_usb_utils" />
                <TextView android:textSize="@dimen/bodyTextSize" android:textStyle="bold" android:textColor="@color/miniDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/manage_ps2_games_on_usb_add_iso_remove_organize" android:maxLines="3" />
            </LinearLayout>
        </com.mixapplications.commons.MixCardView>
        <com.mixapplications.commons.MixCardView android:id="@id/card_filemanager" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="@drawable/mask" android:elevation="0.0dp" app:cardBackgroundColor="@color/designMainColor" app:cardCornerRadius="8.0dp" app:cardElevation="0.0dp" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:layout_marginStart="15.0dp" android:layout_marginEnd="15.0dp">
                <TextView android:textSize="@dimen/smallHeaderTextSize" android:textStyle="bold" android:textColor="@color/miniTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/usb_file_manager" />
                <TextView android:textSize="@dimen/bodyTextSize" android:textStyle="bold" android:textColor="@color/miniDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/simple_usb_file_explorer" android:maxLines="3" />
            </LinearLayout>
        </com.mixapplications.commons.MixCardView>
        <com.mixapplications.commons.MixCardView android:id="@id/card_documentProvider" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="@drawable/mask" android:elevation="0.0dp" app:cardBackgroundColor="@color/designMainColor" app:cardCornerRadius="8.0dp" app:cardElevation="0.0dp" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:layout_marginStart="15.0dp" android:layout_marginEnd="15.0dp">
                <TextView android:textSize="@dimen/smallHeaderTextSize" android:textStyle="bold" android:textColor="@color/miniTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/document_provider" />
                <TextView android:textSize="@dimen/bodyTextSize" android:textStyle="bold" android:textColor="@color/miniDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/mount_partition_as_a_document_provider" android:maxLines="3" />
            </LinearLayout>
        </com.mixapplications.commons.MixCardView>
        <com.mixapplications.commons.MixCardView android:id="@id/card_wipe" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="@drawable/mask" android:elevation="0.0dp" app:cardBackgroundColor="@color/designMainColor" app:cardCornerRadius="8.0dp" app:cardElevation="0.0dp" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:layout_marginStart="15.0dp" android:layout_marginEnd="15.0dp">
                <TextView android:textSize="@dimen/smallHeaderTextSize" android:textStyle="bold" android:textColor="@color/miniTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/wipe_usb" />
                <TextView android:textSize="@dimen/bodyTextSize" android:textStyle="bold" android:textColor="@color/miniDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/wipe_all_usb_data_n_all_data_and_partitions_will_be_deleted" android:maxLines="3" />
            </LinearLayout>
        </com.mixapplications.commons.MixCardView>
        <com.mixapplications.commons.MixCardView android:id="@id/card_raw_write" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="@drawable/mask" android:elevation="0.0dp" app:cardBackgroundColor="@color/designMainColor" app:cardCornerRadius="8.0dp" app:cardElevation="0.0dp" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:layout_marginStart="15.0dp" android:layout_marginEnd="15.0dp">
                <TextView android:textSize="@dimen/smallHeaderTextSize" android:textStyle="bold" android:textColor="@color/miniTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/raw_write" />
                <TextView android:textSize="@dimen/bodyTextSize" android:textStyle="bold" android:textColor="@color/miniDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/write_image_file_to_usb_device_byte_by_byte" android:maxLines="3" />
            </LinearLayout>
        </com.mixapplications.commons.MixCardView>
        <com.mixapplications.commons.MixCardView android:id="@id/card_open_file_system" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="@drawable/mask" android:elevation="0.0dp" app:cardBackgroundColor="@color/designMainColor" app:cardCornerRadius="8.0dp" app:cardElevation="0.0dp" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:layout_marginStart="15.0dp" android:layout_marginEnd="15.0dp">
                <TextView android:textSize="@dimen/smallHeaderTextSize" android:textStyle="bold" android:textColor="@color/miniTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/partition_image_manager" />
                <TextView android:textSize="@dimen/bodyTextSize" android:textStyle="bold" android:textColor="@color/miniDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/open_create_partition_image_file" android:maxLines="3" />
            </LinearLayout>
        </com.mixapplications.commons.MixCardView>
        <com.mixapplications.commons.MixCardView android:id="@id/card_backup" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="@drawable/mask" android:elevation="0.0dp" app:cardBackgroundColor="@color/designMainColor" app:cardCornerRadius="8.0dp" app:cardElevation="0.0dp" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:layout_marginStart="15.0dp" android:layout_marginEnd="15.0dp">
                <TextView android:textSize="@dimen/smallHeaderTextSize" android:textStyle="bold" android:textColor="@color/miniTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/backup_amp_restore" />
                <TextView android:textSize="@dimen/bodyTextSize" android:textStyle="bold" android:textColor="@color/miniDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/backup_or_restore_full_copy_from_usb_device" android:maxLines="3" />
            </LinearLayout>
        </com.mixapplications.commons.MixCardView>
        <com.mixapplications.commons.MixCardView android:id="@id/extractor" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="@drawable/mask" android:elevation="0.0dp" app:cardBackgroundColor="@color/designMainColor" app:cardCornerRadius="8.0dp" app:cardElevation="0.0dp" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:layout_marginStart="15.0dp" android:layout_marginEnd="15.0dp">
                <TextView android:textSize="@dimen/smallHeaderTextSize" android:textStyle="bold" android:textColor="@color/miniTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/archive_extractor" />
                <TextView android:textSize="@dimen/bodyTextSize" android:textStyle="bold" android:textColor="@color/miniDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/archive_supported_format" android:maxLines="3" />
            </LinearLayout>
        </com.mixapplications.commons.MixCardView>
    </LinearLayout>
</ScrollView>
