<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center" android:background="@color/out_date_dialog_shadow_color" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/gl_vs" android:layout_width="0.0dp" android:layout_height="match_parent" app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/gl_ve" android:layout_width="0.0dp" android:layout_height="match_parent" app:layout_constraintGuide_percent="0.95" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/gl_hs" android:layout_width="0.0dp" android:layout_height="match_parent" app:layout_constraintGuide_percent="0.2" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/gl_he" android:layout_width="0.0dp" android:layout_height="match_parent" app:layout_constraintGuide_percent="0.8" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/out_date_dialog_bg" android:padding="15.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" app:circularflow_radiusInDP="10dp" app:layout_constraintBottom_toTopOf="@id/gl_he" app:layout_constraintEnd_toEndOf="@id/gl_ve" app:layout_constraintStart_toStartOf="@id/gl_vs" app:layout_constraintTop_toBottomOf="@id/gl_hs">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/out_date_dialog_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_required" />
        <Space android:layout_width="match_parent" android:layout_height="10.0dp" />
        <TextView android:textSize="16.0sp" android:textColor="@color/out_date_dialog_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/the_current_version_of_the_application_is_no_longer_up_to_date_we_kindly_request_you_to_update_to_the_most_recent_version_for_the_best_experience" />
        <Space android:layout_width="match_parent" android:layout_height="10.0dp" />
        <TextView android:textSize="16.0sp" android:textColor="@color/out_date_dialog_text_color" android:id="@id/txt_shutdown" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/the_application_will_automatically_shut_down_in_10_seconds" />
        <Space android:layout_width="match_parent" android:layout_height="10.0dp" />
        <LinearLayout android:layout_gravity="end" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/out_date_dialog_btn_txt_color" android:layout_gravity="start" android:id="@id/btn_cancel" android:background="@drawable/out_date_dialog_btn_bg" android:paddingLeft="10.0dp" android:paddingTop="5.0dp" android:paddingRight="10.0dp" android:paddingBottom="5.0dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/later" android:paddingHorizontal="10.0dp" android:paddingVertical="5.0dp" />
            <Space android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/out_date_dialog_btn_txt_color" android:layout_gravity="end" android:id="@id/btn_update" android:background="@drawable/out_date_dialog_btn_bg" android:paddingLeft="10.0dp" android:paddingTop="5.0dp" android:paddingRight="10.0dp" android:paddingBottom="5.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_now" android:paddingHorizontal="10.0dp" android:paddingVertical="5.0dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
